--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "fleetman-webapp",
   "version": "1.0.0",
-  "description": "Fleetman Web Application",
-  "main": "server.js",
+  "description": "Fleet Management System - Web Application",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "start": "node index.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
+  "keywords": ["fleet", "management"],
+  "author": "Saifeddine",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1"
   }
 }
